autapi/tests/snapshots/derive_to_schema__enum_optional-2.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "Enum::deserialize_missing()"
---
Some(
    Thing(
        OptionalValue(
            None,
        ),
    ),
)
