autapi/tests/snapshots/derive_to_schema__enum_optional-3.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "UseEnum::schema(&mut Registry::default())"
---
{
  "type": "object",
  "properties": {
    "value": {
      "$ref": "#/components/schemas/Enum"
    }
  }
}
