autapi/tests/snapshots/derive_to_schema__enum_optional-4.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(UseEnum { value: Enum::AnotherThing(OptionalValue(None)) })"
---
{}
