autapi/tests/snapshots/derive_to_schema__enum_optional-5.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<UseEnum>>(json!({}))"
---
Ok(
    SerdeAdapter(
        UseEnum {
            value: Thing(
                OptionalValue(
                    None,
                ),
            ),
        },
    ),
)
