autapi/tests/snapshots/derive_to_schema__enum_unit_only-3.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<Enum>>(json!(\"Val1\"))"
---
Ok(
    SerdeAdapter(
        Val1,
    ),
)
