autapi/tests/snapshots/derive_to_schema__enum_unit_only.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "Enum::schema(&mut Registry::default())"
---
{
  "type": "string",
  "enum": [
    "Val1",
    "Val2"
  ],
  "description": "A unit-only enum"
}
