autapi/tests/snapshots/derive_to_schema__named_field_struct-4.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<Fields>>(json!({\n    \"baz\": \"I_AM_BAZ!\", \"Type\": true, \"ReferencedOptional\": false, \"Inlined\":\n    true\n}))"
---
Err(
    Error("missing property `Foo`", line: 0, column: 0),
)
